Fix spacing when no source links

--- a/codox.core/resources/codox/css/default.css
+++ b/codox.core/resources/codox/css/default.css
@@ -218,11 +218,10 @@ h2 {
 }
 
 .public {
+    margin: 0;
     border-top: 1px solid #e0e0e0;
     padding-top: 14px;
     padding-bottom: 6px;
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 .public:last-child {
@@ -434,6 +433,10 @@ p {
     border-bottom: 1px dotted #333;
     font-variant: none
     cursor: help;
+}
+
+.src-link {
+    margin-bottom: 15px;
 }
 
 .src-link a {
